Hotfix/195528 - fixed z-index for ptah-g-child section, fixed grouping section (#481)
* fixed grouping sections

* fixed z-index for ptah-g-child section

--- a/src/assets/sass/sections/header.sass
+++ b/src/assets/sass/sections/header.sass
@@ -29,6 +29,8 @@
     z-index: 1
     .is-editable &._section-active
       z-index: 19
+      & ~ .ptah-g-child
+        z-index: 19
 
   .b-sandbox
     min-height: 5rem !important
